--- a/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
@@ -33,7 +33,8 @@
         android:id="@+id/listView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
