--- a/EventApp/app/src/main/res/layout/activity_user_login.xml
+++ b/EventApp/app/src/main/res/layout/activity_user_login.xml
@@ -9,7 +9,7 @@
     tools:context=".users.UserSignUp">
 
     <ImageView
-        android:id="@+id/backButton"
+        android:id="@+id/loginBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/abc_ic_ab_back_material"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/userName"
+        android:id="@+id/loginUsername"
         style="@style/LoginEditTextStyle"
         android:layout_width="300dp"
         android:layout_marginTop="48dp"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appEntryHeader" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/loginPassword"
         style="@style/LoginEditTextStyle"
         android:layout_width="300dp"
         android:layout_marginTop="48dp"
@@ -54,10 +54,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toBottomOf="@+id/loginUsername" />
 
     <Button
-        android:id="@+id/signUpButton"
+        android:id="@+id/loginButton"
         style="@style/LoginButtonStyle"
         android:layout_marginTop="48dp"
         android:paddingHorizontal="60sp"
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
 
     <TextView
         android:id="@+id/forgotPassword"
@@ -78,7 +78,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <TextView
         android:id="@+id/redirectToSignUp"
