--- a/EventApp/app/src/main/res/layout/activity_user_signup.xml
+++ b/EventApp/app/src/main/res/layout/activity_user_signup.xml
@@ -31,13 +31,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/fullName"
+        android:id="@+id/email"
         style="@style/LoginEditTextStyle"
         android:layout_width="300dp"
         android:layout_marginTop="60dp"
-        android:drawableStart="@drawable/ic_person"
-        android:hint="@string/full_name"
-        android:inputType="textPersonName"
+        android:drawableStart="@drawable/ic_email"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fullName" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/password"
