--- a/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
@@ -6,38 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".attendee.AttendeeEvent">
 
-    <Button
-        android:id="@+id/showSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Search_Events"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp" />
-
     <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/eventSearcher"
+        android:layout_width="340dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="52dp"
         android:background="#CAC9C9"
-        android:visibility="gone"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/showSearchButton"
+        android:visibility="visible"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:iconifiedByDefault="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/listView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="564dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/eventSearcher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
