--- a/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
@@ -4,17 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".organizer.OrganizerEvent">
+    android:paddingHorizontal="16dp"
+    tools:context=".attendee.AttendeeHome">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/elevateEvent"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/organizer_event"
+        android:gravity="center"
+        android:text="@string/elevate_your_events"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.127" />
+
+    <ListView
+        android:id="@+id/homepageListView"
+        android:layout_width="327dp"
+        android:layout_height="570dp"
+        android:layout_marginTop="32dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/elevateEvent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
