Navigation and browsing of events for attenddee complete

--- a/EventApp/app/src/main/res/menu/bottom_nav_menu_attendee.xml
+++ b/EventApp/app/src/main/res/menu/bottom_nav_menu_attendee.xml
@@ -6,7 +6,7 @@
         android:id="@+id/attendeeHome" />
     <item android:title="@string/event"
         android:icon="@drawable/ic_calender"
-        android:id="@+id/attendeeEvent"
+        android:id="@+id/attendeeEventMenu"
         />
     <item android:title="@string/account"
         android:icon="@drawable/ic_person"
