--- a/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
+++ b/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/eventDescription" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/viewEvent"
         android:layout_width="70dp"
         android:layout_height="41dp"
         android:textColor="@color/white"
