--- a/EventApp/app/src/main/res/layout/activity_organizer.xml
+++ b/EventApp/app/src/main/res/layout/activity_organizer.xml
@@ -23,6 +23,38 @@
         app:navGraph="@navigation/organizer_nav_graph"/>
 
 
+    <Button
+        android:id="@+id/button_createEvent"
+        android:layout_width="390dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="90dp"
+        android:background="@drawable/rounded_button_background"
+        android:drawableEnd="@drawable/ic_plus"
+        android:onClick="onCustomizeProfileClicked"
+        android:padding="20dp"
+        android:text="@string/create_event"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.372"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_notification"
+        android:layout_width="390dp"
+        android:layout_height="220dp"
+        android:layout_marginBottom="88dp"
+        android:background="@drawable/rounded_button_background"
+        android:drawableEnd="@drawable/ic_bell"
+        android:onClick="onSettingClicked"
+        android:padding="20dp"
+        android:text="@string/notification"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerOrganizerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationOrganizerView"
