--- a/EventApp/app/src/main/res/layout/fragment_create_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_create_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".organizer.OrganizerAccount">
+    tools:context=".organizer.CreateEventFragment">
 
     <TextView
         android:id="@+id/CreateEventName"
@@ -66,23 +66,28 @@
         android:id="@+id/buttonArrow"
         android:layout_width="56dp"
         android:layout_height="55dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="168dp"
+        android:layout_marginBottom="50dp"
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonConfirm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteImage" />
 
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button_background"
         android:text="@string/Confirm"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buttonArrow" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
