--- a/EventApp/app/src/main/res/values/colors.xml
+++ b/EventApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mainAppColor">#2B4BF2</color>
+    <color name="gray">#666565</color>
 </resources>
