--- a/EventApp/app/src/main/res/layout/fragment_admin_home.xml
+++ b/EventApp/app/src/main/res/layout/fragment_admin_home.xml
@@ -6,15 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".admin.AdminHome">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/hello_blank_fragment"
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_marginTop="125sp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/welcomeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome, Administrator"
+            android:textSize="30sp"
+            android:layout_gravity="center_horizontal" />
+
+        <ListView
+            android:id="@+id/adminOptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60sp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="30sp"
+            android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
