--- a/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
+++ b/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.AdminProfileActivity">
+    tools:context=".admin.AdminBrowseProfile">
 
     <SearchView
         android:id="@+id/profileSearcher"
