--- a/EventApp/app/src/main/res/layout/fragment_organizer_home.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_home.xml
@@ -8,14 +8,27 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <TextView
+        android:id="@+id/organizer_welcome_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/default_attendee_home_text"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_createEvent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button_createEvent"
         android:layout_width="390dp"
         android:layout_height="200dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="135dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button_background"
         android:drawableEnd="@drawable/ic_plus"
         android:onClick="onCustomizeProfileClicked"
@@ -25,7 +38,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button_notification"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +59,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_createEvent" />
 
