Upload Image complete

--- a/EventApp/app/src/main/res/layout/fragment_attendee_home.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_home.xml
@@ -12,39 +12,40 @@
 
     <Button
         android:id="@+id/join_event"
-        android:layout_width="375dp"
-        android:layout_height="200dp"
+        android:layout_width="343dp"
+        android:layout_height="159dp"
+        android:layout_marginTop="148dp"
         android:background="@drawable/rounded_button_background"
+        android:drawableStart="@drawable/ic_speech_bubble"
+        android:padding="30dp"
         android:text="@string/join_event_text"
         android:textColor="#FFFFFF"
-        android:padding="30dp"
-        android:drawableStart="@drawable/ic_speech_bubble"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/notification"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/notification"
-        android:layout_width="375dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="318dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="224dp"
         android:background="@drawable/rounded_button_background"
+        android:drawableStart="@drawable/ic_bell"
+        android:padding="30dp"
         android:text="@string/notification_text"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        android:padding="30dp"
-        android:drawableStart="@drawable/ic_bell"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toBottomOf="@+id/join_event"
+        app:layout_constraintVertical_bias="0.486"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
