fixed some errors

--- a/EventApp/app/src/main/res/layout/fragment_organizer_notification.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_notification.xml
@@ -8,11 +8,20 @@
 
     <ListView
         android:id="@+id/OrganizerNotificationListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
+
+    <!-- TextView for "No Notification at this time" -->
+    <TextView
+        android:id="@+id/noNotifyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_notification_at_this_time"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
